后台计算部署

--- a/package.json
+++ b/package.json
@@ -26,20 +26,31 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "body-parser": "^1.19.0",
+    "bufferhelper": "^0.2.1",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
+    "eval5": "^1.4.6",
     "express-rate-limit": "^5.2.3",
     "form-data": "^3.0.0",
     "helmet": "^4.4.1",
-    "http-proxy-middleware": "^1.0.6",
+    "http": "^0.0.1-security",
+    "iconv-lite": "^0.6.2",
+    "jStat": "^1.8.6",
     "nestjs-config": "^1.4.7",
+    "net": "^1.0.2",
+    "numeral": "^2.0.6",
+    "querystring": "^0.2.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "url": "^0.11.0",
+    "util": "^0.12.3",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
