--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:local": "cross-env NODE_ENV=local nest start --watch",
+    "start:dev": "cross-env NODE_ENV=dev pm2 start --name nest dist/main.js",
+    "start:uat": "cross-env NODE_ENV=uat pm2 start --name nest dist/main.js",
+    "start:ver": "cross-env NODE_ENV=ver pm2 start --name nest dist/main.js",
+    "start:pro": "cross-env NODE_ENV=pro pm2 start --name nest dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,6 +30,7 @@
     "bufferhelper": "^0.2.1",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.4",
@@ -37,13 +39,11 @@
     "express-rate-limit": "^5.2.3",
     "form-data": "^3.0.0",
     "helmet": "^4.4.1",
-    "http": "^0.0.1-security",
     "iconv-lite": "^0.6.2",
     "jStat": "^1.8.6",
     "nestjs-config": "^1.4.7",
     "net": "^1.0.2",
     "numeral": "^2.0.6",
-    "querystring": "^0.2.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
